@@ -5,6 +5,7 @@ ChangeLog
 
 SVN TRUNK
 
+- Experimental LV2 Time designated port support (Delay BPM). 
 - Preparations for Qt5 migration. (TESTING)
 
 
